# desafio_artemis

./: .flake8  .gitignore  README.md  config.py  pyproject.toml
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: ci.yml
dynaconf/: .secrets.toml  db.toml  settings.toml
src/: main.py
src/extractors/: labor_claim_calculation_extractor.py
tests/: test_labor_claim_calculation_extractor.py
tests/data/labor_claim_calculation_extractor_test_cases/: contribuicao_social_atomic_cases.jsonl  fgts_atomic_cases.jsonl  field_value_atomic_cases.jsonl  full_extraction_test_cases.jsonl  honorarios_atomic_cases.jsonl  irrf_atomic_cases.jsonl  pending_patterns_atomic_cases.jsonl
utils/: cast_utils.py  general_utils.py  text_utils.py
