[project]
name = "desafio_artemis"
version = "0.1.0"
description = ""
authors = [
    {name = "alanr",email = "alanrios2001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dynaconf (>=3.2.13,<4.0.0)"
]

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^25.1.0"
flake8 = "^7.2.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pre-commit = "^3.8.0"
auto-walrus = "^0.3.4"
pyupgrade = "^3.20.0"
deptry = "^0.20.0"
gradio = "^5.15.0"
sqlalchemyseed = "2.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
skip-magic-trailing-comma = true

[tool.mypy]
ignore_missing_imports = true
plugins = "pydantic.mypy"
