[project]
name = "desafio_artemis"
version = "0.1.0"
description = ""
authors = [
    {name = "alanr",email = "alanrios2001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dynaconf (>=3.2.13,<4.0.0)",
    "mypy (>=1.20.2,<2.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "auto-walrus (>=0.4.1,<0.5.0)",
    "pymupdf (>=1.27.2.3,<2.0.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
skip-magic-trailing-comma = true

[tool.mypy]
ignore_missing_imports = true
plugins = "pydantic.mypy"
